add placeholder site

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import ContextAlert from '../components/ContextAlert.astro';
-import Markdown from '../components/Markdown.astro';
+import Layout from '../layouts/ComingSoon.astro';
+// import ContextAlert from '../components/ContextAlert.astro';
+// import Markdown from '../components/Markdown.astro';
 
 const explainer = `
 An Astro website can go way beyond static pages - on the right platform.
@@ -12,10 +12,5 @@ Any page or data can be rebuilt only when needed, without site visitors ever get
 ---
 
 <Layout title="Welcome to Astro.">
-    <ContextAlert class="mb-8" />
-    <h1 class="mb-10">Netlify Platform Starter for Astro</h1>
-    <Markdown content={explainer} class="mb-10 text-lg" />
-    <p>
-        <a href="https://docs.netlify.com/frameworks/astro/" class="btn btn-lg sm:min-w-64">Read the Docs</a>
-    </p>
+    <h1 class="mt-10 mb-10">agatha.nyc</h1>
 </Layout>
