--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,10 @@ import Expertise from '../components/home/Expertise.astro';
 import Hero from '../components/home/Hero.astro';
 import Services from '../components/home/Services.astro';
 import Testimonials from '../components/home/Testimonials.astro';
-import LayoutStone from '../layouts/LayoutStone.astro';
+import Layout from '../layouts/Layout.astro';
 ---
 
-<LayoutStone
+<Layout
   description="Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and Startup websites."
   title="Stone · Premium Astro template"
 >
@@ -18,4 +18,4 @@ import LayoutStone from '../layouts/LayoutStone.astro';
   <About />
   <Testimonials />
   <Cta />
-</LayoutStone>
+</Layout>
