--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,18 +4,16 @@ import Cta from '../components/home/Cta.astro';
 import Expertise from '../components/home/Expertise.astro';
 import Hero from '../components/home/Hero.astro';
 import Services from '../components/home/Services.astro';
-import Testimonials from '../components/home/Testimonials.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout
-  description="Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and Startup websites."
-  title="Stone · Premium Astro template"
+  description="Personalized therapy in NYC to help you navigate life’s challenges with clarity and confidence."
+  title="AGATHA.NYC"
 >
   <Hero />
   <Services />
   <Expertise />
   <About />
-  <Testimonials />
   <Cta />
 </Layout>
