--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,4 +1,5 @@
 ---
+const year = new Date().getFullYear()
 const bottomLinks = [
   {
     header: 'Social',
@@ -82,17 +83,14 @@ const bottomLinks = [
     <div class="flex flex-col justify-between gap-12 sm:gap-16 lg:flex-row">
       <div class="flex max-w-sm flex-col items-start gap-6 sm:gap-8">
         <img
-          class="h-8 w-auto"
-          width="65"
-          height="40"
+          class="h-5 w-auto"
           :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.svg'"
           alt="Stone"
         />
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
-          Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and
-          Startup websites.
+          Personalized therapy in NYC to help you navigate life’s challenges with clarity and confidence.
         </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2023 Stone</p>
+        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© {year} Stone</p>
       </div>
 
       <!-- Bottom links -->
