--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -39,11 +39,9 @@ const links = [
       >
         <span class="sr-only">Stone</span>
         <img
-          class="h-8 w-auto"
-          width="65"
-          height="40"
+          class="h-5 w-auto"
           :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.svg'"
-          alt="Stone"
+          alt="agatha.nyc logo"
         />
       </a>
     </div>
@@ -87,7 +85,7 @@ const links = [
       </button>
 
       <!-- Toggle menu -->
-      <button
+      <!-- <button
         type="button"
         class="text-primary-950 dark:text-primary-200 hover:bg-primary-500/10 dark:hover:bg-primary-400/10 ring-primary-950 inline-flex h-14 w-14 items-center justify-center rounded-full transition focus:outline-none focus-visible:ring-2"
         @click="open = !open"
@@ -121,7 +119,7 @@ const links = [
             d="M12.0007 10.5865L16.9504 5.63672L18.3646 7.05093L13.4149 12.0007L18.3646 16.9504L16.9504 18.3646L12.0007 13.4149L7.05093 18.3646L5.63672 16.9504L10.5865 12.0007L5.63672 7.05093L7.05093 5.63672L12.0007 10.5865Z"
           ></path>
         </svg>
-      </button>
+      </button> -->
     </div>
   </div>
 
