--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -20,8 +20,7 @@
       <img
         class="h-auto w-full rounded-3xl"
         width="1280"
-        height="640"
-        src="/assets/hero.webp"
+        src="/assets/hero-1.webp"
         alt="Hero picture"
       />
     </div>
