--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -2,31 +2,6 @@
 const year = new Date().getFullYear()
 const bottomLinks = [
   {
-    header: 'Social',
-    links: [
-      {
-        name: 'Github',
-        href: 'https://github.com/',
-        isExternal: true,
-      },
-      {
-        name: 'Twitter',
-        href: 'https://twitter.com/',
-        isExternal: true,
-      },
-      {
-        name: 'Instagram',
-        href: 'https://instagram.com/',
-        isExternal: true,
-      },
-      {
-        name: 'Facebook',
-        href: 'https://facebook.com/',
-        isExternal: true,
-      },
-    ],
-  },
-  {
     header: 'Company',
     links: [
       {
@@ -37,11 +12,6 @@ const bottomLinks = [
       {
         name: 'About',
         href: '/about',
-        isExternal: false,
-      },
-      {
-        name: 'Pricing',
-        href: '/pricing',
         isExternal: false,
       },
       {
@@ -90,11 +60,11 @@ const bottomLinks = [
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
           Personalized therapy in NYC to help you navigate life’s challenges with clarity and confidence.
         </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© {year} Stone</p>
+        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© {year}</p>
       </div>
 
       <!-- Bottom links -->
-      <div class="grid max-w-xl flex-1 grid-cols-1 gap-8 sm:grid-cols-3">
+      <div class="grid max-w-xl flex-1 grid-cols-1 gap-8 sm:grid-cols-2">
         {
           bottomLinks.map((group) => (
             <div class="flex flex-col gap-4">
