--- a/src/components/contact/ContactForm.astro
+++ b/src/components/contact/ContactForm.astro
@@ -7,7 +7,15 @@
           Schedule a complimentary 15-minute consultation to learn more about the therapy process.
         </p>
       </div>
-      <form action="#" method="POST" class="mt-3 flex flex-col gap-y-6">
+      <form 
+        class="mt-3 flex flex-col gap-y-6"
+        netlify
+        data-netlify="true"
+        netlify-honeypot
+        name="feedback"
+        method="POST"
+        action="/success"
+      >
         <!-- Full name input -->
         <div>
           <label for="full-name" class="sr-only">Full name</label>
