--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -2,19 +2,19 @@
 const services = [
   {
     step: '01',
-    name: 'Design',
+    name: 'Trauma',
     description:
       'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
   },
   {
     step: '02',
-    name: 'Develop',
+    name: 'Anxiety',
     description:
       'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
   },
   {
     step: '03',
-    name: 'Maintain',
+    name: 'Something else',
     description:
       'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
   },
