--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -1,10 +1,10 @@
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="grid gap-12 lg:grid-cols-3 lg:gap-8">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">What to Expect</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Meet Agatha</h2>
       <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-2">
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-          Therapy is a collaborative process. Together, we’ll explore patterns, deepen self-awareness, and build tools to help you navigate life with more clarity and confidence. Sessions are available virtually across New York State.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada in urna in vehicula. Pellentesque consectetur purus vitae magna ornare, id ultrices odio sodales. Donec quis quam non elit faucibus fermentum non vitae felis. Pellentesque sollicitudin lobortis diam. Suspendisse potenti. Morbi eleifend enim fringilla tempor suscipit
         </p>
       </div>
     </div>
