--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import About from '../components/home/About.astro';
+import Expect from '../components/home/Expect.astro';
 import Cta from '../components/home/Cta.astro';
 import Expertise from '../components/home/Expertise.astro';
 import Hero from '../components/home/Hero.astro';
@@ -12,8 +13,9 @@ import Layout from '../layouts/Layout.astro';
   title="AGATHA.NYC"
 >
   <Hero />
-  <Services />
   <About />
+  <Services />
+  <Expect />
   <Expertise />
   
   <Cta />
