--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -1,10 +1,31 @@
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="grid gap-12 lg:grid-cols-3 lg:gap-8">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Meet Agatha</h2>
+      <div>
+        <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">
+          Meet Agatha
+        </h2>
+        <!-- <img
+          class="h-auto w-32 md:w-48 rounded-3xl"
+          width=""
+          src="/assets/bio.jpg"
+          alt="Agatha Parker"
+        /> -->
+      </div>
       <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-2">
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada in urna in vehicula. Pellentesque consectetur purus vitae magna ornare, id ultrices odio sodales. Donec quis quam non elit faucibus fermentum non vitae felis. Pellentesque sollicitudin lobortis diam. Suspendisse potenti. Morbi eleifend enim fringilla tempor suscipit
+        <p
+          class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg"
+        >
+          I’m a Licensed Clinical Social Worker (LCSW) based in NYC. I hold a
+          Bachelor's in Social Work from the University of Vermont and a
+          Master's in Social Work from New York University. With experience at
+          Montefiore Medical Center, I offer a compassionate, client-centered
+          approach to therapy. I specialize in helping individuals navigate life
+          transitions, manage stress, and heal from trauma. I’m committed to
+          creating a safe, nonjudgmental space where you can explore your
+          challenges and work toward emotional well-being. My goal is to help
+          you find clarity, strength, and resilience as you move forward in your
+          journey toward healing.
         </p>
       </div>
     </div>
