--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -4,37 +4,31 @@ const features = [
     id: 'expertise-1',
     name: 'Can I choose remote or in-person sesssions?',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      "At this time, I offer remote therapy sessions only. I find that virtual sessions provide a comfortable, convenient, and flexible way for us to connect, no matter where in New York state you're located. If you have any questions about setting up a session, feel free to reach out!",
   },
   {
     id: 'expertise-2',
     name: 'Do you accept insurance plans?',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Currently, I do not accept insurance. However, I am happy to provide you with a receipt for services, which you can submit to your insurance provider for possible reimbursement. Please check with your insurer for out-of-network benefits.',
   },
   {
     id: 'expertise-3',
-    name: 'Lorem ipsum, dolor sit amet consectetur?',
+    name: 'Are you accepting new patients?',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      "Yes, I am currently accepting new patients! If you're interested in starting therapy, please reach out to schedule an initial consultation and discuss your needs. I look forward to supporting you on your journey.",
   },
   {
     id: 'expertise-4',
-    name: 'Lorem ipsum, dolor sit amet consectetur?',
+    name: 'How long will therapy take?',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      "The length of therapy depends on your individual needs and goals. Some clients may find relief in a few sessions, while others may benefit from longer-term therapy. Together, we will assess progress and adjust the plan as necessary to ensure you're getting the support you need.",
   },
   {
     id: 'expertise-5',
-    name: 'Lorem ipsum, dolor sit amet consectetur?',
+    name: 'Is therapy confidential?',
     description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
-  },
-  {
-    id: 'expertise-6',
-    name: 'Lorem ipsum, dolor sit amet consectetur?',
-    description:
-      'Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor cupiditate blanditiis ratione.',
+      'Yes, everything discussed in therapy is strictly confidential. Your privacy is important to me, and I follow all legal and ethical guidelines to protect your information. There are a few exceptions, such as if there is a risk of harm to yourself or others, but I will always inform you if such situations arise.',
   },
 ];
 ---
