--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -30,13 +30,8 @@ const bottomLinks = [
         isExternal: false,
       },
       {
-        name: '404',
-        href: '/404',
-        isExternal: false,
-      },
-      {
-        name: 'Styleguide',
-        href: '/styleguide',
+        name: 'Terms of use',
+        href: '/terms-of-use',
         isExternal: false,
       },
     ],
