--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import About from '../components/home/About.astro';
 import Expect from '../components/home/Expect.astro';
 import Cta from '../components/home/Cta.astro';
-import Expertise from '../components/home/Expertise.astro';
+import FAQ from '../components/home/FAQ.astro';
 import Hero from '../components/home/Hero.astro';
 import Services from '../components/home/Services.astro';
 import Layout from '../layouts/Layout.astro';
@@ -16,7 +16,6 @@ import Layout from '../layouts/Layout.astro';
   <About />
   <Services />
   <Expect />
-  <Expertise />
-  
+  <FAQ />
   <Cta />
 </Layout>
