--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -13,6 +13,12 @@ const features = [
       'Currently, I do not accept insurance. However, I am happy to provide you with a receipt for services, which you can submit to your insurance provider for possible reimbursement. Please check with your insurer for out-of-network benefits.',
   },
   {
+    id: 'expertise-6',
+    name: 'How much does a session cost?',
+    description:
+      'The initial consultation is 60 minutes and costs $250. Subsequent sessions are 45 minutes and are priced at $200. Payment is due at the time of each session, and we accept online card payments (credit, debit, FSA, and HSA).',
+  },
+  {
     id: 'expertise-3',
     name: 'Are you accepting new patients?',
     description:
@@ -29,6 +35,12 @@ const features = [
     name: 'Is therapy confidential?',
     description:
       'Yes, everything discussed in therapy is strictly confidential. Your privacy is important to me, and I follow all legal and ethical guidelines to protect your information. There are a few exceptions, such as if there is a risk of harm to yourself or others, but I will always inform you if such situations arise.',
+  },
+  {
+    id: 'expertise-7',
+    name: 'What is your cancellation policy?',
+    description:
+      "If you need to cancel or reschedule a session, please provide at least 24 hours' notice. Cancellations made within 24 hours of the scheduled appointment will incur the full session fee. We understand that emergencies happen, and we appreciate your understanding in respecting this policy.",
   },
 ];
 ---
