--- a/src/pages/privacy.astro
+++ b/src/pages/privacy.astro
@@ -1,12 +1,19 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
+import PrivacyPolicy from "../components/PrivacyPolicy.astro";
 ---
 
 <Layout
   description="Our privacy policy will help you understand what information is collected and how it is used."
   title="Privacy policy · Stone"
 >
-  <div class="mx-auto max-w-3xl px-4 py-16 sm:px-6 sm:py-20 lg:px-8">
+  <div class="sm:pb:20 flex flex-col gap-4 pb-16 text-center">
+    <h1 class="text-4xl font-medium tracking-tight sm:text-5xl">
+      Privacy Policy
+    </h1>
+  </div>
+  <PrivacyPolicy />
+  <!-- <div class="mx-auto max-w-3xl px-4 py-16 sm:px-6 sm:py-20 lg:px-8">
     <div class="sm:pb:20 flex flex-col gap-4 pb-16 text-center">
       <h1 class="text-4xl font-medium tracking-tight sm:text-5xl">Privacy Policy</h1>
       <p class="text-base">Last update: July 31, 2023</p>
@@ -61,5 +68,5 @@ import Layout from '../layouts/Layout.astro';
         [contact email/phone number/address].
       </p>
     </div>
-  </div>
+  </div> -->
 </Layout>
