--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -40,7 +40,7 @@ const bottomLinks = [
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
           Personalized therapy in NYC to help you navigate life’s challenges with clarity and confidence.
         </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© {year}</p>
+        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© {year} Agatha Parker</p>
       </div>
 
       <!-- Bottom links -->
