--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -18,8 +18,7 @@
         >
           I’m a Licensed Clinical Social Worker (LCSW) based in NYC. I hold a
           Bachelor's in Social Work from the University of Vermont and a
-          Master's in Social Work from New York University. With experience at
-          Montefiore Medical Center, I offer a compassionate, client-centered
+          Master's in Social Work from New York University. With experience working with individuals struggling with vision impairment at SUNY College of Optometry and within an integrated behavioral health program at a major NYC hospital system, I offer a compassionate, client-centered
           approach to therapy. I specialize in helping individuals navigate life
           transitions, manage stress, and heal from trauma. I’m committed to
           creating a safe, nonjudgmental space where you can explore your
