--- a/src/components/home/Expect.astro
+++ b/src/components/home/Expect.astro
@@ -4,7 +4,7 @@
       <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">What to Expect</h2>
       <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-2">
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
-          Therapy is a collaborative process. Together, we’ll explore patterns, deepen self-awareness, and build tools to help you navigate life with more clarity and confidence. Sessions are available virtually across New York State.
+          Therapy is a collaborative process. Together, we’ll explore patterns, deepen self-awareness, and build tools to help you navigate life with more confidence. Sessions are available virtually across New York State.
         </p>
       </div>
     </div>
