--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -40,7 +40,13 @@ const features = [
     id: 'expertise-7',
     name: 'What is your cancellation policy?',
     description:
-      "If you need to cancel or reschedule a session, please provide at least 24 hours' notice. Cancellations made within 24 hours of the scheduled appointment will incur the full session fee. We understand that emergencies happen, and we appreciate your understanding in respecting this policy.",
+      "If you need to cancel or reschedule a session, please provide at least 24 hours' notice. Cancellations made within 24 hours of the scheduled appointment will incur the full session fee. I understand that emergencies happen, and appreciate your understanding in respecting this policy.",
+  },
+  {
+    id: 'expertise-8',
+    name: 'What platform do you use for telehealth?',
+    description:
+      "For telehealth sessions, I use SimplePractice, a secure and HIPAA-compliant platform designed specifically for healthcare providers. SimplePractice ensures that all communications and data are encrypted to protect your privacy and confidentiality. You'll receive a secure link to join your session directly through the platform, making it easy and safe to connect from anywhere.",
   },
 ];
 ---
