--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -20,9 +20,9 @@ const services = [
   },
   {
     step: '04',
-    name: 'Child & Adolescent Therapy',
+    name: '???',
     description:
-      'Addressing emotional, behavioral, or mental health issues in children and teens, with family support.',
+      'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
   },
   {
     step: '05',
