--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -48,6 +48,12 @@ const features = [
     description:
       "For telehealth sessions, I use SimplePractice, a secure and HIPAA-compliant platform designed specifically for healthcare providers. SimplePractice ensures that all communications and data are encrypted to protect your privacy and confidentiality. You'll receive a secure link to join your session directly through the platform, making it easy and safe to connect from anywhere.",
   },
+  {
+    id: 'expertise-8',
+    name: 'Do you work with children?',
+    description:
+      "No.",
+  },
 ];
 ---
 
