--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -1,3 +1,6 @@
+---
+import ScheduleWidget from '../home/ScheduleWidget.astro';
+---
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex flex-col gap-16">
@@ -10,6 +13,7 @@
             Personalized therapy in NYC to help you navigate life’s challenges with clarity and confidence.
           </p>
         </div>
+        <ScheduleWidget />
         <!-- <a
           href="/pricing"
           class="bg-primary-600 dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-full border border-transparent px-5 py-3 text-base font-medium text-white transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2"
