--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -16,7 +16,7 @@ const features = [
     id: 'expertise-6',
     name: 'How much does a session cost?',
     description:
-      'The initial consultation is 60 minutes and costs $250. Subsequent sessions are 45 minutes and are priced at $200. Payment is due at the time of each session, and we accept online card payments (credit, debit, FSA, and HSA).',
+      'The initial consultation is 60 minutes and costs $250. Subsequent sessions are 45 minutes and are priced at $200. Payment is due at the time of each session, and we accept online card payments (credit, debit, FSA, and HSA). No sliding scale is offered at this time.',
   },
   {
     id: 'expertise-3',
@@ -52,7 +52,7 @@ const features = [
     id: 'expertise-8',
     name: 'Do you work with children?',
     description:
-      "No.",
+      "No, I do not work with children. My practice is focused on supporting adults and young adults. If you're looking for a therapist for a child or adolescent, I’d be happy to provide referrals to trusted colleagues who specialize in that area.",
   },
 ];
 ---
