--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -14,15 +14,15 @@ const services = [
   },
   {
     step: '03',
-    name: 'Family Therapy & Relationship Counseling',
+    name: 'Early Adulthood Transitions',
     description:
-      'Improving family dynamics, communication, and resolving conflicts in relationships or parenting struggles.',
+      'Offering support to young adults navigating the challenges of college life and the shift into greater independence.',
   },
   {
     step: '04',
-    name: '???',
+    name: 'Fertility & Reproductive Health',
     description:
-      'Lorem ipsum dolor sit amet, consectetur adipiscing elit.',
+      'Supporting individuals through the emotional challenges of fertility struggles.',
   },
   {
     step: '05',
@@ -32,7 +32,7 @@ const services = [
   },
   {
     step: '06',
-    name: 'Transitions & Stress Management',
+    name: 'Stress Management',
     description:
       'Helping clients cope with major life changes (career shifts, relocation, divorce) and develop strategies to manage stress and build resilience.',
   },
