--- a/src/components/home/Services.astro
+++ b/src/components/home/Services.astro
@@ -16,7 +16,7 @@ const services = [
     step: '03',
     name: 'Early Adulthood Transitions',
     description:
-      'Offering support to young adults navigating the challenges of college life and the shift into greater independence.',
+      'Offering support to young adults navigating the challenges of college life and the shift toward independence.',
   },
   {
     step: '04',
@@ -28,7 +28,7 @@ const services = [
     step: '05',
     name: 'Grief & Loss',
     description:
-      'Helping individuals navigate grief and adjust to life after loss.',
+      'Guiding individuals through grief and adjusting to life after loss.',
   },
   {
     step: '06',
