--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -15,7 +15,7 @@ const bottomLinks = [
     header: 'Legal',
     links: [
       {
-        name: 'Privacy',
+        name: 'Privacy Policy',
         href: '/privacy',
         isExternal: false,
       },
