--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -16,7 +16,7 @@ const features = [
     id: 'expertise-6',
     name: 'How much does a session cost?',
     description:
-      'The initial consultation is 60 minutes and costs $250. Subsequent sessions are 45 minutes and are priced at $200. Payment is due at the time of each session, and we accept online card payments (credit, debit, FSA, and HSA). No sliding scale is offered at this time.',
+      'The initial intake is 60 minutes and costs $250. Subsequent 45 minute sessions are priced at $200. Payment is due at the time of each session, and I accept online card payments (credit, debit, FSA, and HSA). No sliding scale is offered at this time.',
   },
   {
     id: 'expertise-3',
@@ -40,7 +40,7 @@ const features = [
     id: 'expertise-7',
     name: 'What is your cancellation policy?',
     description:
-      "If you need to cancel or reschedule a session, please provide at least 24 hours' notice. Cancellations made within 24 hours of the scheduled appointment will incur the full session fee. I understand that emergencies happen, and appreciate your understanding in respecting this policy.",
+      "If you need to cancel or reschedule a session please provide at least 24 hours' notice. Cancellations made within 24 hours of the scheduled appointment will incur the full session fee.",
   },
   {
     id: 'expertise-8',
@@ -52,7 +52,7 @@ const features = [
     id: 'expertise-8',
     name: 'Do you work with children?',
     description:
-      "No, I do not work with children. My practice is focused on supporting adults and young adults. If you're looking for a therapist for a child or adolescent, I’d be happy to provide referrals to trusted colleagues who specialize in that area.",
+      "No, I do not work with children. My practice is focused on supporting adults. If you're looking for a therapist for a child or adolescent, I’d be happy to provide referrals to trusted colleagues who specialize in that area.",
   },
 ];
 ---
