--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -2,7 +2,7 @@
 const features = [
   {
     id: 'expertise-1',
-    name: 'Can I choose remote or in-person sesssions?',
+    name: 'Do you offer remote or in-person sesssions?',
     description:
       "At this time, I offer remote therapy sessions only. I find that virtual sessions provide a comfortable, convenient, and flexible way for us to connect, no matter where in New York state you're located. If you have any questions about setting up a session, feel free to reach out!",
   },
