--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,12 @@ const { description, title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
     <title>{title}</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:image" content="/assets/hero-1.webp" />
+    <meta property="og:image:width" content="1280" />
+    <meta property="og:image:height" content="623" />
     <ClientRouter />
   </head>
   <body
