--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -81,3 +81,10 @@ const bottomLinks = [
     </div>
   </div>
 </footer>
+
+<style lang="scss">
+  $blue: red;
+  footer {
+    background: $blue;
+  }
+</style>
