--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '@fontsource/inter/latin-400.css';
 import '@fontsource/inter/latin-500.css';
+import '../styles/global.scss';
 // import { ViewTransitions } from 'astro:transitions';
 import { ClientRouter } from 'astro:transitions';
 import Footer from '../components/layout/Footer.astro';
