--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -37,7 +37,7 @@ const links = [
         href="/"
         class="focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200 rounded-md focus-visible:outline focus-visible:outline-2"
       >
-        <span class="sr-only">Stone</span>
+        <span class="sr-only">Agatha.NYC</span>
         <img
           class="h-5 w-auto"
           :src="$store.theme.isDark ? '/assets/logo-inverted.svg' : '/assets/logo.svg'"
