--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -4,13 +4,13 @@ const features = [
     id: 'expertise-1',
     name: 'Do you offer remote or in-person sessions?',
     description:
-      "At this time, I offer remote therapy sessions only. I find that virtual sessions provide a comfortable, convenient, and flexible way for us to connect, no matter where in New York state you're located. If you have any questions about setting up a session, feel free to reach out!",
+      "At this time, I offer remote therapy sessions only. I find that virtual sessions provide a comfortable, convenient, and flexible way for us to connect, no matter where in New York State you're located. If you have any questions about setting up a session, feel free to reach out!",
   },
   {
     id: 'expertise-2',
     name: 'Do you accept insurance plans?',
     description:
-      'Currently, I do not accept insurance. However, I am happy to provide you with a receipt for services, which you can submit to your insurance provider for possible reimbursement. Please check with your insurer for out-of-network benefits.',
+      'Currently, I do not accept insurance. However, I am happy to provide you with a superbill for services, which you can submit to your insurance provider for possible reimbursement. Please check with your insurer for out-of-network benefits.',
   },
   {
     id: 'expertise-6',
@@ -52,7 +52,7 @@ const features = [
     id: 'expertise-8',
     name: 'Do you work with children?',
     description:
-      "No, I do not work with children. My practice is focused on supporting adults. If you're looking for a therapist for a child or adolescent, I’d be happy to provide referrals to trusted colleagues who specialize in that area.",
+      "At this time my practice is focused on supporting adults. If you're looking for a therapist for a child or adolescent, I’d be happy to provide referrals to trusted colleagues who specialize in that area.",
   },
 ];
 ---
