--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -16,13 +16,7 @@
         <p
           class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg"
         >
-          I’m a Licensed Clinical Social Worker (LCSW) based in NYC. I hold a Bachelor's in Social Work from the University of Vermont and earned my Master’s in Social Work from New York University in 2016. With experience working with individuals struggling with vision impairment at SUNY College of Optometry and within an integrated behavioral health program at a major NYC hospital system, I offer a compassionate, client-centered
-          approach to therapy. I specialize in helping individuals navigate life
-          transitions, manage stress, and heal from trauma. I’m committed to
-          creating a safe, nonjudgmental space where you can explore your
-          challenges and work toward emotional well-being. My goal is to help
-          you find clarity, strength, and resilience as you move forward in your
-          journey toward healing.
+          I’m a Licensed Clinical Social Worker (LCSW) based in NYC. I hold a Bachelor's in Social Work from the University of Vermont and earned my Master’s in Social Work from New York University in 2016. With experience working with individuals struggling with vision impairment at SUNY College of Optometry and within an integrated behavioral health program at a major NYC hospital system, I offer a compassionate, client-centered approach to therapy. I specialize in helping individuals navigate life transitions, manage stress, and heal from trauma. Therapeutic interventions include evidence based practices such as CBT, interpersonal psychotherapy, solution focused therapy, acceptance and committment therapy, and mindfulness. I’m committed to creating a safe, nonjudgmental space where you can explore your challenges and work toward emotional well-being. My goal is to help you find clarity, strength, and resilience as you move forward in your journey toward healing.
         </p>
       </div>
     </div>
