Rearranged FAQ items

--- a/src/components/home/FAQ.astro
+++ b/src/components/home/FAQ.astro
@@ -1,10 +1,22 @@
 ---
 const features = [
   {
+    id: 'expertise-3',
+    name: 'Are you accepting new patients?',
+    description:
+      "Yes, I am currently accepting new patients! If you're interested in starting therapy, please reach out to schedule an initial consultation and discuss your needs. I look forward to supporting you on your journey.",
+  },
+  {
     id: 'expertise-1',
     name: 'Do you offer remote or in-person sessions?',
     description:
       "At this time, I offer remote therapy sessions only. I find that virtual sessions provide a comfortable, convenient, and flexible way for us to connect, no matter where in New York State you're located. If you have any questions about setting up a session, feel free to reach out!",
+  },
+  {
+    id: 'expertise-8',
+    name: 'What platform do you use for telehealth?',
+    description:
+      "For telehealth sessions, I use SimplePractice, a secure and HIPAA-compliant platform designed specifically for healthcare providers. SimplePractice ensures that all communications and data are encrypted to protect your privacy and confidentiality. You'll receive a secure link to join your session directly through the platform, making it easy and safe to connect from anywhere.",
   },
   {
     id: 'expertise-2',
@@ -19,10 +31,16 @@ const features = [
       'The initial intake is 60 minutes and costs $250. Subsequent 45 minute sessions are priced at $200. Payment is due at the time of each session, and I accept online card payments (credit, debit, FSA, and HSA). No sliding scale is offered at this time.',
   },
   {
-    id: 'expertise-3',
-    name: 'Are you accepting new patients?',
+    id: 'expertise-10',
+    name: 'Why do you require my credit card information?',
     description:
-      "Yes, I am currently accepting new patients! If you're interested in starting therapy, please reach out to schedule an initial consultation and discuss your needs. I look forward to supporting you on your journey.",
+      'The 15 minute consultation is free, and your card will not be charged. Should we wish to continue with ongoing therapy, a card on file will provide easy and convenient payments so you can focus on the content of the session without the hassle of billing.',
+  },
+  {
+    id: 'expertise-7',
+    name: 'What is your cancellation policy?',
+    description:
+      "If you need to cancel or reschedule a session please provide at least 24 hours' notice. Cancellations made within 24 hours of the scheduled appointment will incur the full session fee.",
   },
   {
     id: 'expertise-4',
@@ -37,19 +55,7 @@ const features = [
       'Yes, everything discussed in therapy is strictly confidential. Your privacy is important to me, and I follow all legal and ethical guidelines to protect your information. There are a few exceptions, such as if there is a risk of harm to yourself or others, but I will always inform you if such situations arise.',
   },
   {
-    id: 'expertise-7',
-    name: 'What is your cancellation policy?',
-    description:
-      "If you need to cancel or reschedule a session please provide at least 24 hours' notice. Cancellations made within 24 hours of the scheduled appointment will incur the full session fee.",
-  },
-  {
-    id: 'expertise-8',
-    name: 'What platform do you use for telehealth?',
-    description:
-      "For telehealth sessions, I use SimplePractice, a secure and HIPAA-compliant platform designed specifically for healthcare providers. SimplePractice ensures that all communications and data are encrypted to protect your privacy and confidentiality. You'll receive a secure link to join your session directly through the platform, making it easy and safe to connect from anywhere.",
-  },
-  {
-    id: 'expertise-8',
+    id: 'expertise-9',
     name: 'Do you work with children?',
     description:
       "At this time my practice is focused on supporting adults. If you're looking for a therapist for a child or adolescent, I’d be happy to provide referrals to trusted colleagues who specialize in that area.",
