--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout
   description="Personalized therapy in NYC to help you navigate life’s challenges with clarity and confidence."
-  title="AGATHA.NYC"
+  title="AGATHA.NYC — Personalized therapy"
 >
   <Hero />
   <About />
