Add Google Analytics

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import GA from '../GA.astro';
 const year = new Date().getFullYear();
 const bottomLinks = [
   {
@@ -76,6 +77,8 @@ const disclaimer =
     </div>
   </div>
 </footer>
+
+<GA />
 
 <style lang="scss">
   .disclaimer {
