--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,4 +1,7 @@
 ---
+import PsychologyTodayWidget from "../home/PsychologyTodayWidget.astro";
+const showWidget = false;
+
 const year = new Date().getFullYear();
 const bottomLinks = [
   {
@@ -57,12 +60,13 @@ const disclaimer =
       </div>
     </div>
     <div
-      class="flex flex-col justify-between gap-3 sm:gap-12 lg:flex-row mt-16 pt-4 border-t border-primary-900/10 dark:border-primary-300/10"
+      class="flex flex-col justify-between gap-3 sm:gap-12 lg:flex-row mt-16 pt-4 border-t border-primary-900/10 dark:border-primary-300/10 md:items-center"
     >
       <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">
         © {year} Agatha Parker
       </p>
-      <div class="links flex gap-12">
+      <div class="links flex gap-12 items-center">
+        
         <div class="text-primary-950/70 dark:text-primary-200/70 text-sm">
           therapy@agatha.nyc
         </div>
@@ -72,6 +76,7 @@ const disclaimer =
         >
           Privacy Policy
         </a>
+        {showWidget ? <div><PsychologyTodayWidget /></div> : null}
       </div>
     </div>
   </div>
