Moved PT badge to the bottom

--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import PsychologyTodayWidget from "../home/PsychologyTodayWidget.astro";
-const showWidget = false;
+const showWidget = true;
 
 import GA from '../GA.astro';
 
