--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,6 +1,6 @@
 ---
 import PsychologyTodayWidget from "../home/PsychologyTodayWidget.astro";
-const showWidget = true;
+const showWidget = false;
 
 const links = [
   {
